--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c3711d",
+   "id": "1ce61493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "        df_clean[column] = df_clean[column].astype(str)\n",
     "        df_clean[column] = df_clean[column].str.strip().str.lower()\n",
     "        \n",
-    "        # Try to convert to numeric if possible\n",
+    "        \n",
     "        try:\n",
     "            # Remove any existing commas and convert to numeric\n",
     "            numeric_values = df_clean[column].str.replace(',', '').astype(float)\n",
@@ -175,7 +175,7 @@
     "\n",
     "def main():\n",
     "    # Get credentials file path\n",
-    "    CREDENTIALS_FILE = 'credentials.json'  # This will be created by GitHub Actions\n",
+    "    CREDENTIALS_FILE = 'credentials.json' \n",
     "    \n",
     "    try:\n",
     "        # Connect to Google Sheets\n",
