--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ce61493",
+   "id": "0a72e639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,20 @@
     "    data = all_values[1:]\n",
     "    return pd.DataFrame(data, columns=headers)\n",
     "\n",
+    "def separate_opening_stock(df):\n",
+    "    \"\"\"\n",
+    "    Separate opening stock records from the main DataFrame\n",
+    "    Returns two DataFrames: one with opening stock and one without\n",
+    "    \"\"\"\n",
+    "    # Create a mask for opening stock records\n",
+    "    opening_stock_mask = df['purchasing_officer'].str.contains('opening stock', case=False, na=False)\n",
+    "    \n",
+    "    # Split the DataFrame\n",
+    "    opening_stock_df = df[opening_stock_mask].copy()\n",
+    "    main_df = df[~opening_stock_mask].copy()\n",
+    "    \n",
+    "    return main_df, opening_stock_df\n",
+    "\n",
     "def standardize_dataframe(df):\n",
     "    \"\"\"\n",
     "    Standardize DataFrame by:\n",
@@ -60,7 +74,6 @@
     "        df_clean[column] = df_clean[column].astype(str)\n",
     "        df_clean[column] = df_clean[column].str.strip().str.lower()\n",
     "        \n",
-    "        \n",
     "        try:\n",
     "            # Remove any existing commas and convert to numeric\n",
     "            numeric_values = df_clean[column].str.replace(',', '').astype(float)\n",
@@ -77,6 +90,9 @@
     "    Standardize month and date columns to datetime format.\n",
     "    Handles multiple date formats and converts to Looker-compatible formats.\n",
     "    \"\"\"\n",
+    "    if df.empty:\n",
+    "        return df\n",
+    "        \n",
     "    df = df.copy()\n",
     "    \n",
     "    try:\n",
@@ -102,15 +118,19 @@
     "    \"\"\"\n",
     "    Process both DataFrames with standardization\n",
     "    \"\"\"\n",
-    "    # Apply the standardization to both DataFrames\n",
+    "    # First standardize the DataFrames\n",
     "    stock_inflow_df = standardize_dataframe(stock_inflow_df)\n",
     "    release_df = standardize_dataframe(release_df)\n",
     "    \n",
-    "    # Apply date standardization to both DataFrames\n",
-    "    stock_inflow_df = standardize_dates(stock_inflow_df)\n",
+    "    # Separate opening stock records\n",
+    "    stock_inflow_main_df, opening_stock_df = separate_opening_stock(stock_inflow_df)\n",
+    "    \n",
+    "    # Apply date standardization to all DataFrames\n",
+    "    stock_inflow_main_df = standardize_dates(stock_inflow_main_df)\n",
+    "    opening_stock_df = standardize_dates(opening_stock_df)\n",
     "    release_df = standardize_dates(release_df)\n",
     "    \n",
-    "    return stock_inflow_df, release_df\n",
+    "    return stock_inflow_main_df, opening_stock_df, release_df\n",
     "\n",
     "def upload_df_to_gsheet(df, spreadsheet_id, sheet_name, credentials_file):\n",
     "    \"\"\"\n",
@@ -163,14 +183,14 @@
     "            body=body\n",
     "        ).execute()\n",
     "        \n",
-    "        print(f\"Updated {result.get('updatedCells')} cells\")\n",
+    "        print(f\"Updated {result.get('updatedCells')} cells in {sheet_name}\")\n",
     "        return True\n",
     "        \n",
     "    except HttpError as error:\n",
-    "        print(f\"An error occurred: {error}\")\n",
+    "        print(f\"An error occurred in {sheet_name}: {error}\")\n",
     "        return False\n",
     "    except Exception as e:\n",
-    "        print(f\"An unexpected error occurred: {str(e)}\")\n",
+    "        print(f\"An unexpected error occurred in {sheet_name}: {str(e)}\")\n",
     "        return False\n",
     "\n",
     "def main():\n",
@@ -182,20 +202,28 @@
     "        spreadsheet = connect_to_sheets(CREDENTIALS_FILE)\n",
     "        \n",
     "        # Read worksheets\n",
-    "        stock_inflow_df = read_worksheet_to_df(spreadsheet, 'stock_inflow_')\n",
+    "        stock_inflow_df = read_worksheet_to_df(spreadsheet, 'stock_inflow')\n",
     "        release_df = read_worksheet_to_df(spreadsheet, 'release')\n",
     "        \n",
     "        # Process the data\n",
-    "        stock_inflow_df, release_df = process_sheets_data(stock_inflow_df, release_df)\n",
+    "        stock_inflow_main_df, opening_stock_df, release_df = process_sheets_data(stock_inflow_df, release_df)\n",
     "        \n",
     "        # Upload processed data to new sheets\n",
     "        spreadsheet_id = os.getenv('SPREADSHEET_ID')\n",
     "        \n",
-    "        # Upload stock inflow data\n",
+    "        # Upload main stock inflow data\n",
     "        success_stock = upload_df_to_gsheet(\n",
-    "            stock_inflow_df, \n",
+    "            stock_inflow_main_df, \n",
     "            spreadsheet_id, \n",
     "            'stock_inflow_clean',\n",
+    "            CREDENTIALS_FILE\n",
+    "        )\n",
+    "        \n",
+    "        # Upload opening stock data\n",
+    "        success_opening_stock = upload_df_to_gsheet(\n",
+    "            opening_stock_df, \n",
+    "            spreadsheet_id, \n",
+    "            'opening_stock',\n",
     "            CREDENTIALS_FILE\n",
     "        )\n",
     "        \n",
@@ -207,10 +235,10 @@
     "            CREDENTIALS_FILE\n",
     "        )\n",
     "        \n",
-    "        if success_stock and success_release:\n",
+    "        if success_stock and success_opening_stock and success_release:\n",
     "            print(\"Data processing and upload completed successfully!\")\n",
     "        else:\n",
-    "            raise Exception(\"Failed to upload one or both datasets\")\n",
+    "            raise Exception(\"Failed to upload one or more datasets\")\n",
     "            \n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred: {str(e)}\")\n",
@@ -237,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
