--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -43,13 +43,9 @@
     "    Separate opening stock records from the main DataFrame\n",
     "    Returns two DataFrames: one with opening stock and one without\n",
     "    \"\"\"\n",
-    "    # Create a mask for opening stock records\n",
     "    opening_stock_mask = df['purchasing_officer'].str.contains('opening stock', case=False, na=False)\n",
-    "    \n",
-    "    # Split the DataFrame\n",
     "    opening_stock_df = df[opening_stock_mask].copy()\n",
     "    main_df = df[~opening_stock_mask].copy()\n",
-    "    \n",
     "    return main_df, opening_stock_df\n",
     "\n",
     "def standardize_dataframe(df):\n",
@@ -70,25 +66,20 @@
     "    \n",
     "    # Process each column\n",
     "    for column in df_clean.columns:\n",
-    "        # First convert to string and clean\n",
     "        df_clean[column] = df_clean[column].astype(str)\n",
     "        df_clean[column] = df_clean[column].str.strip().str.lower()\n",
     "        \n",
     "        try:\n",
-    "            # Remove any existing commas and convert to numeric\n",
     "            numeric_values = df_clean[column].str.replace(',', '').astype(float)\n",
-    "            # If conversion successful, update the column\n",
     "            df_clean[column] = numeric_values\n",
     "        except (ValueError, TypeError):\n",
-    "            # If conversion fails, keep as string\n",
     "            pass\n",
     "    \n",
     "    return df_clean\n",
     "\n",
     "def standardize_dates(df):\n",
     "    \"\"\"\n",
-    "    Standardize month and date columns to datetime format.\n",
-    "    Handles multiple date formats and converts to Looker-compatible formats.\n",
+    "    Standardize month and date columns to datetime format\n",
     "    \"\"\"\n",
     "    if df.empty:\n",
     "        return df\n",
@@ -103,29 +94,24 @@
     "        except ValueError:\n",
     "            df['date'] = pd.to_datetime(df['date'], format='mixed', dayfirst=True)\n",
     "    \n",
-    "    # Extract standardized month (as full month name) from the date column\n",
     "    df['month'] = df['date'].dt.strftime('%b').str.lower()\n",
-    "    \n",
-    "    # Add month-year column in YYYY-MM format for Looker compatibility\n",
     "    df['year_month'] = df['date'].dt.strftime('%Y-%b')\n",
-    "    \n",
-    "    # Format the date column in YYYY-MM-DD format for Looker compatibility\n",
     "    df['date'] = df['date'].dt.strftime('%Y-%m-%d')\n",
     "    \n",
     "    return df\n",
     "\n",
     "def process_sheets_data(stock_inflow_df, release_df):\n",
     "    \"\"\"\n",
-    "    Process both DataFrames with standardization\n",
+    "    Process both DataFrames with standardization and filter out opening stock records\n",
     "    \"\"\"\n",
-    "    # First standardize the DataFrames\n",
     "    stock_inflow_df = standardize_dataframe(stock_inflow_df)\n",
     "    release_df = standardize_dataframe(release_df)\n",
     "    \n",
-    "    # Separate opening stock records\n",
     "    stock_inflow_main_df, opening_stock_df = separate_opening_stock(stock_inflow_df)\n",
     "    \n",
-    "    # Apply date standardization to all DataFrames\n",
+    "    # Remove opening stock records from release_df\n",
+    "    release_df = release_df[~release_df['name_of_collector'].str.contains('opening stock', case=False, na=False)]\n",
+    "    \n",
     "    stock_inflow_main_df = standardize_dates(stock_inflow_main_df)\n",
     "    opening_stock_df = standardize_dates(opening_stock_df)\n",
     "    release_df = standardize_dates(release_df)\n",
@@ -134,48 +120,40 @@
     "\n",
     "def upload_df_to_gsheet(df, spreadsheet_id, sheet_name, credentials_file):\n",
     "    \"\"\"\n",
-    "    Upload a pandas DataFrame to Google Sheets.\n",
+    "    Upload a pandas DataFrame to Google Sheets\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        # Create a copy of the DataFrame to avoid modifying the original\n",
     "        df_copy = df.copy()\n",
     "        \n",
-    "        # Convert datetime columns to string format\n",
     "        datetime_columns = df_copy.select_dtypes(include=['datetime64[ns]']).columns\n",
     "        for col in datetime_columns:\n",
     "            df_copy[col] = df_copy[col].dt.strftime('%Y-%m-%d')\n",
     "            \n",
-    "        # Convert any remaining non-serializable objects to strings\n",
     "        for col in df_copy.columns:\n",
     "            if df_copy[col].dtype == 'object':\n",
     "                df_copy[col] = df_copy[col].astype(str)\n",
     "        \n",
-    "        # Load credentials from service account file\n",
     "        SCOPES = ['https://www.googleapis.com/auth/spreadsheets']\n",
     "        credentials = service_account.Credentials.from_service_account_file(\n",
     "            credentials_file,\n",
     "            scopes=SCOPES\n",
     "        )\n",
     "        \n",
-    "        # Build the Sheets API service\n",
     "        service = build('sheets', 'v4', credentials=credentials)\n",
     "        \n",
-    "        # Convert DataFrame to values list\n",
-    "        values = [df_copy.columns.values.tolist()]  # Header row\n",
-    "        values.extend(df_copy.values.tolist())      # Data rows\n",
+    "        values = [df_copy.columns.values.tolist()]\n",
+    "        values.extend(df_copy.values.tolist())\n",
     "        \n",
     "        body = {\n",
     "            'values': values\n",
     "        }\n",
     "        \n",
-    "        # Clear existing content first\n",
     "        clear_request = service.spreadsheets().values().clear(\n",
     "            spreadsheetId=spreadsheet_id,\n",
     "            range=f'{sheet_name}!A1:ZZ'\n",
     "        )\n",
     "        clear_request.execute()\n",
     "        \n",
-    "        # Update the sheet with new values\n",
     "        result = service.spreadsheets().values().update(\n",
     "            spreadsheetId=spreadsheet_id,\n",
     "            range=f'{sheet_name}!A1',\n",
@@ -194,24 +172,18 @@
     "        return False\n",
     "\n",
     "def main():\n",
-    "    # Get credentials file path\n",
     "    CREDENTIALS_FILE = 'credentials.json' \n",
     "    \n",
     "    try:\n",
-    "        # Connect to Google Sheets\n",
     "        spreadsheet = connect_to_sheets(CREDENTIALS_FILE)\n",
     "        \n",
-    "        # Read worksheets\n",
     "        stock_inflow_df = read_worksheet_to_df(spreadsheet, 'stock_inflow')\n",
     "        release_df = read_worksheet_to_df(spreadsheet, 'release')\n",
     "        \n",
-    "        # Process the data\n",
     "        stock_inflow_main_df, opening_stock_df, release_df = process_sheets_data(stock_inflow_df, release_df)\n",
     "        \n",
-    "        # Upload processed data to new sheets\n",
     "        spreadsheet_id = os.getenv('SPREADSHEET_ID')\n",
     "        \n",
-    "        # Upload main stock inflow data\n",
     "        success_stock = upload_df_to_gsheet(\n",
     "            stock_inflow_main_df, \n",
     "            spreadsheet_id, \n",
@@ -219,7 +191,6 @@
     "            CREDENTIALS_FILE\n",
     "        )\n",
     "        \n",
-    "        # Upload opening stock data\n",
     "        success_opening_stock = upload_df_to_gsheet(\n",
     "            opening_stock_df, \n",
     "            spreadsheet_id, \n",
@@ -227,7 +198,6 @@
     "            CREDENTIALS_FILE\n",
     "        )\n",
     "        \n",
-    "        # Upload release data\n",
     "        success_release = upload_df_to_gsheet(\n",
     "            release_df, \n",
     "            spreadsheet_id, \n",
