--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -41,7 +41,6 @@
     "def separate_opening_stock(df):\n",
     "    \"\"\"\n",
     "    Separate opening stock records from the main DataFrame\n",
-    "    Returns two DataFrames: one with opening stock and one without\n",
     "    \"\"\"\n",
     "    opening_stock_mask = df['purchasing_officer'].str.contains('opening stock', case=False, na=False)\n",
     "    opening_stock_df = df[opening_stock_mask].copy()\n",
@@ -50,11 +49,7 @@
     "\n",
     "def standardize_dataframe(df):\n",
     "    \"\"\"\n",
-    "    Standardize DataFrame by:\n",
-    "    1. Converting column names to lowercase with underscores\n",
-    "    2. Removing whitespace from all values\n",
-    "    3. Converting all string values to lowercase\n",
-    "    4. Converting numeric columns to proper number format without commas\n",
+    "    Standardize DataFrame formatting\n",
     "    \"\"\"\n",
     "    df_clean = df.copy()\n",
     "    \n",
@@ -66,11 +61,14 @@
     "    \n",
     "    # Process each column\n",
     "    for column in df_clean.columns:\n",
+    "        # Convert to string series first\n",
     "        df_clean[column] = df_clean[column].astype(str)\n",
+    "        # Apply string operations\n",
     "        df_clean[column] = df_clean[column].str.strip().str.lower()\n",
     "        \n",
+    "        # Try converting to numeric\n",
     "        try:\n",
-    "            numeric_values = df_clean[column].str.replace(',', '').astype(float)\n",
+    "            numeric_values = pd.to_numeric(df_clean[column].str.replace(',', ''), errors='raise')\n",
     "            df_clean[column] = numeric_values\n",
     "        except (ValueError, TypeError):\n",
     "            pass\n",
@@ -79,7 +77,7 @@
     "\n",
     "def standardize_dates(df):\n",
     "    \"\"\"\n",
-    "    Standardize month and date columns to datetime format\n",
+    "    Standardize dates to consistent format\n",
     "    \"\"\"\n",
     "    if df.empty:\n",
     "        return df\n",
@@ -102,14 +100,13 @@
     "\n",
     "def process_sheets_data(stock_inflow_df, release_df):\n",
     "    \"\"\"\n",
-    "    Process both DataFrames with standardization and filter out opening stock records\n",
+    "    Process both DataFrames\n",
     "    \"\"\"\n",
     "    stock_inflow_df = standardize_dataframe(stock_inflow_df)\n",
     "    release_df = standardize_dataframe(release_df)\n",
     "    \n",
     "    stock_inflow_main_df, opening_stock_df = separate_opening_stock(stock_inflow_df)\n",
     "    \n",
-    "    # Remove opening stock records from release_df\n",
     "    release_df = release_df[~release_df['name_of_collector'].str.contains('opening stock', case=False, na=False)]\n",
     "    \n",
     "    stock_inflow_main_df = standardize_dates(stock_inflow_main_df)\n",
@@ -120,7 +117,7 @@
     "\n",
     "def upload_df_to_gsheet(df, spreadsheet_id, sheet_name, credentials_file):\n",
     "    \"\"\"\n",
-    "    Upload a pandas DataFrame to Google Sheets\n",
+    "    Upload DataFrame to Google Sheets\n",
     "    \"\"\"\n",
     "    try:\n",
     "        df_copy = df.copy()\n",
@@ -172,7 +169,7 @@
     "        return False\n",
     "\n",
     "def main():\n",
-    "    CREDENTIALS_FILE = 'credentials.json' \n",
+    "    CREDENTIALS_FILE = 'credentials.json'\n",
     "    \n",
     "    try:\n",
     "        spreadsheet = connect_to_sheets(CREDENTIALS_FILE)\n",
