--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -59,11 +59,9 @@
     "    df_clean.columns = df_clean.columns.str.replace(' ', '_')  \n",
     "    df_clean.columns = df_clean.columns.str.replace('-', '_')\n",
     "    \n",
-    "    # Process each column\n",
+    "    # Convert all columns to string type first\n",
     "    for column in df_clean.columns:\n",
-    "        # Convert to string series first\n",
-    "        df_clean[column] = df_clean[column].astype(str)\n",
-    "        # Apply string operations\n",
+    "        df_clean[column] = df_clean[column].astype('string')\n",
     "        df_clean[column] = df_clean[column].str.strip().str.lower()\n",
     "        \n",
     "        # Try converting to numeric\n",
