--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -16,9 +16,6 @@
     "import os\n",
     "\n",
     "def connect_to_sheets(credentials_file):\n",
-    "    \"\"\"\n",
-    "    Establish connection to Google Sheets and return the spreadsheet object\n",
-    "    \"\"\"\n",
     "    credentials = service_account.Credentials.from_service_account_file(\n",
     "        credentials_file,\n",
     "        scopes=['https://www.googleapis.com/auth/spreadsheets']\n",
@@ -29,9 +26,6 @@
     "    return gc.open_by_url(spreadsheet_url)\n",
     "\n",
     "def read_worksheet_to_df(spreadsheet, worksheet_name):\n",
-    "    \"\"\"\n",
-    "    Read a worksheet and convert it to a pandas DataFrame\n",
-    "    \"\"\"\n",
     "    worksheet = spreadsheet.worksheet(worksheet_name)\n",
     "    all_values = worksheet.get_all_values()\n",
     "    headers = all_values[0]\n",
@@ -39,32 +33,19 @@
     "    return pd.DataFrame(data, columns=headers)\n",
     "\n",
     "def separate_opening_stock(df):\n",
-    "    \"\"\"\n",
-    "    Separate opening stock records from the main DataFrame\n",
-    "    Returns two DataFrames: one with opening stock and one without\n",
-    "    \"\"\"\n",
     "    opening_stock_mask = df['purchasing_officer'].str.contains('opening stock', case=False, na=False)\n",
     "    opening_stock_df = df[opening_stock_mask].copy()\n",
     "    main_df = df[~opening_stock_mask].copy()\n",
     "    return main_df, opening_stock_df\n",
     "\n",
     "def standardize_dataframe(df):\n",
-    "    \"\"\"\n",
-    "    Standardize DataFrame by:\n",
-    "    1. Converting column names to lowercase with underscores\n",
-    "    2. Removing whitespace from all values\n",
-    "    3. Converting all string values to lowercase\n",
-    "    4. Converting numeric columns to proper number format without commas\n",
-    "    \"\"\"\n",
     "    df_clean = df.copy()\n",
     "    \n",
-    "    # Standardize column names\n",
     "    df_clean.columns = df_clean.columns.str.lower()  \n",
     "    df_clean.columns = df_clean.columns.str.strip()\n",
     "    df_clean.columns = df_clean.columns.str.replace(' ', '_')  \n",
     "    df_clean.columns = df_clean.columns.str.replace('-', '_')\n",
     "    \n",
-    "    # Process each column\n",
     "    for column in df_clean.columns:\n",
     "        df_clean[column] = df_clean[column].astype(str)\n",
     "        df_clean[column] = df_clean[column].str.strip().str.lower()\n",
@@ -78,9 +59,6 @@
     "    return df_clean\n",
     "\n",
     "def standardize_dates(df):\n",
-    "    \"\"\"\n",
-    "    Standardize month and date columns to datetime format\n",
-    "    \"\"\"\n",
     "    if df.empty:\n",
     "        return df\n",
     "        \n",
@@ -101,16 +79,15 @@
     "    return df\n",
     "\n",
     "def process_sheets_data(stock_inflow_df, release_df):\n",
-    "    \"\"\"\n",
-    "    Process both DataFrames with standardization and filter out opening stock records\n",
-    "    \"\"\"\n",
     "    stock_inflow_df = standardize_dataframe(stock_inflow_df)\n",
     "    release_df = standardize_dataframe(release_df)\n",
     "    \n",
     "    stock_inflow_main_df, opening_stock_df = separate_opening_stock(stock_inflow_df)\n",
     "    \n",
-    "    # Remove opening stock records from release_df\n",
     "    release_df = release_df[~release_df['name_of_collector'].str.contains('opening stock', case=False, na=False)]\n",
+    "    \n",
+    "    # Set quantity to 0 for gizzard products\n",
+    "    release_df.loc[release_df['product'].str.contains('gizzard', case=False, na=False), 'quantity'] = 0\n",
     "    \n",
     "    stock_inflow_main_df = standardize_dates(stock_inflow_main_df)\n",
     "    opening_stock_df = standardize_dates(opening_stock_df)\n",
@@ -119,9 +96,6 @@
     "    return stock_inflow_main_df, opening_stock_df, release_df\n",
     "\n",
     "def upload_df_to_gsheet(df, spreadsheet_id, sheet_name, credentials_file):\n",
-    "    \"\"\"\n",
-    "    Upload a pandas DataFrame to Google Sheets\n",
-    "    \"\"\"\n",
     "    try:\n",
     "        df_copy = df.copy()\n",
     "        \n",
