--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -78,6 +78,65 @@
     "    \n",
     "    return df\n",
     "\n",
+    "def create_summary_df(stock_inflow_df, release_df):\n",
+    "    summary_df = pd.DataFrame()\n",
+    "    \n",
+    "    # Get unique months from both dataframes\n",
+    "    inflow_months = set(stock_inflow_df['month'].unique())\n",
+    "    release_months = set(release_df['month'].unique())\n",
+    "    all_months = sorted(list(inflow_months.union(release_months)))\n",
+    "    \n",
+    "    # Get unique year_months from both dataframes\n",
+    "    inflow_year_months = set(stock_inflow_df['year_month'].unique())\n",
+    "    release_year_months = set(release_df['year_month'].unique())\n",
+    "    all_year_months = sorted(list(inflow_year_months.union(release_year_months)))\n",
+    "    \n",
+    "    # Create base dataframe with all months\n",
+    "    summary_df = pd.DataFrame({\n",
+    "        'month': all_months,\n",
+    "        'year_month': all_year_months\n",
+    "    })\n",
+    "    \n",
+    "    # Calculate chicken inflow summaries\n",
+    "    chicken_inflow = stock_inflow_df[stock_inflow_df['product_type'] == 'chicken'].groupby('month').agg({\n",
+    "        'quantity': 'sum',\n",
+    "        'weight': 'sum'\n",
+    "    })\n",
+    "    \n",
+    "    summary_df['total_chicken_inflow_quantity'] = summary_df['month'].map(\n",
+    "        chicken_inflow['quantity']).fillna(0)\n",
+    "    summary_df['total_chicken_inflow_weight'] = summary_df['month'].map(\n",
+    "        chicken_inflow['weight']).fillna(0)\n",
+    "    \n",
+    "    # Calculate chicken release summaries\n",
+    "    chicken_release = release_df[release_df['product'] == 'chicken'].groupby('month').agg({\n",
+    "        'quantity': 'sum',\n",
+    "        'weight_in_kg': 'sum'\n",
+    "    })\n",
+    "    \n",
+    "    summary_df['total_chicken_release_quantity'] = summary_df['month'].map(\n",
+    "        chicken_release['quantity']).fillna(0)\n",
+    "    summary_df['total_chicken_release_weight'] = summary_df['month'].map(\n",
+    "        chicken_release['weight_in_kg']).fillna(0)\n",
+    "    \n",
+    "    # Calculate gizzard inflow summaries\n",
+    "    gizzard_inflow = stock_inflow_df[stock_inflow_df['product_type'] == 'gizzard'].groupby('month').agg({\n",
+    "        'weight': 'sum'\n",
+    "    })\n",
+    "    \n",
+    "    summary_df['total_gizzard_inflow_weight'] = summary_df['month'].map(\n",
+    "        gizzard_inflow['weight']).fillna(0)\n",
+    "    \n",
+    "    # Calculate gizzard release summaries\n",
+    "    gizzard_release = release_df[release_df['product'] == 'gizzard'].groupby('month').agg({\n",
+    "        'weight_in_kg': 'sum'\n",
+    "    })\n",
+    "    \n",
+    "    summary_df['total_gizzard_release_weight'] = summary_df['month'].map(\n",
+    "        gizzard_release['weight_in_kg']).fillna(0)\n",
+    "    \n",
+    "    return summary_df\n",
+    "\n",
     "def process_sheets_data(stock_inflow_df, release_df):\n",
     "    stock_inflow_df = standardize_dataframe(stock_inflow_df)\n",
     "    release_df = standardize_dataframe(release_df)\n",
@@ -93,7 +152,9 @@
     "    opening_stock_df = standardize_dates(opening_stock_df)\n",
     "    release_df = standardize_dates(release_df)\n",
     "    \n",
-    "    return stock_inflow_main_df, opening_stock_df, release_df\n",
+    "    summary_df = create_summary_df(stock_inflow_main_df, release_df)\n",
+    "    \n",
+    "    return stock_inflow_main_df, opening_stock_df, release_df, summary_df\n",
     "\n",
     "def upload_df_to_gsheet(df, spreadsheet_id, sheet_name, credentials_file):\n",
     "    try:\n",
@@ -154,7 +215,7 @@
     "        stock_inflow_df = read_worksheet_to_df(spreadsheet, 'stock_inflow')\n",
     "        release_df = read_worksheet_to_df(spreadsheet, 'release')\n",
     "        \n",
-    "        stock_inflow_main_df, opening_stock_df, release_df = process_sheets_data(stock_inflow_df, release_df)\n",
+    "        stock_inflow_main_df, opening_stock_df, release_df, summary_df = process_sheets_data(stock_inflow_df, release_df)\n",
     "        \n",
     "        spreadsheet_id = os.getenv('SPREADSHEET_ID')\n",
     "        \n",
@@ -179,7 +240,14 @@
     "            CREDENTIALS_FILE\n",
     "        )\n",
     "        \n",
-    "        if success_stock and success_opening_stock and success_release:\n",
+    "        success_summary = upload_df_to_gsheet(\n",
+    "            summary_df,\n",
+    "            spreadsheet_id,\n",
+    "            'summary',\n",
+    "            CREDENTIALS_FILE\n",
+    "        )\n",
+    "        \n",
+    "        if success_stock and success_opening_stock and success_release and success_summary:\n",
     "            print(\"Data processing and upload completed successfully!\")\n",
     "        else:\n",
     "            raise Exception(\"Failed to upload one or more datasets\")\n",
