--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -156,14 +156,23 @@
     "    \n",
     "    return stock_inflow_main_df, opening_stock_df, release_df, summary_df\n",
     "\n",
+    "          \n",
     "def upload_df_to_gsheet(df, spreadsheet_id, sheet_name, credentials_file):\n",
     "    try:\n",
     "        df_copy = df.copy()\n",
     "        \n",
+    "        # Format datetime columns\n",
     "        datetime_columns = df_copy.select_dtypes(include=['datetime64[ns]']).columns\n",
     "        for col in datetime_columns:\n",
     "            df_copy[col] = df_copy[col].dt.strftime('%Y-%m-%d')\n",
+    "        \n",
+    "        # Format numeric columns\n",
+    "        numeric_columns = df_copy.select_dtypes(include=['float64', 'int64']).columns\n",
+    "        for col in numeric_columns:\n",
+    "            # Round to 2 decimal places and convert to string to prevent scientific notation\n",
+    "            df_copy[col] = df_copy[col].round(2).apply(lambda x: '{:.2f}'.format(x) if pd.notnull(x) else '')\n",
     "            \n",
+    "        # Convert remaining object columns to string\n",
     "        for col in df_copy.columns:\n",
     "            if df_copy[col].dtype == 'object':\n",
     "                df_copy[col] = df_copy[col].astype(str)\n",
@@ -183,18 +192,60 @@
     "            'values': values\n",
     "        }\n",
     "        \n",
+    "        # Clear existing content\n",
     "        clear_request = service.spreadsheets().values().clear(\n",
     "            spreadsheetId=spreadsheet_id,\n",
     "            range=f'{sheet_name}!A1:ZZ'\n",
     "        )\n",
     "        clear_request.execute()\n",
     "        \n",
+    "        # Update with new content\n",
     "        result = service.spreadsheets().values().update(\n",
     "            spreadsheetId=spreadsheet_id,\n",
     "            range=f'{sheet_name}!A1',\n",
     "            valueInputOption='RAW',\n",
     "            body=body\n",
     "        ).execute()\n",
+    "        \n",
+    "        # Format number columns in Google Sheets\n",
+    "        requests = []\n",
+    "        sheet_metadata = service.spreadsheets().get(spreadsheetId=spreadsheet_id).execute()\n",
+    "        sheet_id = None\n",
+    "        \n",
+    "        # Find the sheet ID for the current sheet\n",
+    "        for sheet in sheet_metadata.get('sheets', ''):\n",
+    "            if sheet.get('properties', {}).get('title') == sheet_name:\n",
+    "                sheet_id = sheet.get('properties', {}).get('sheetId')\n",
+    "                break\n",
+    "        \n",
+    "        if sheet_id is not None:\n",
+    "            # Apply number formatting to all numeric columns\n",
+    "            requests.append({\n",
+    "                'repeatCell': {\n",
+    "                    'range': {\n",
+    "                        'sheetId': sheet_id,\n",
+    "                        'startRowIndex': 1,  # Skip header row\n",
+    "                        'startColumnIndex': 0,\n",
+    "                        'endColumnIndex': len(df_copy.columns)\n",
+    "                    },\n",
+    "                    'cell': {\n",
+    "                        'userEnteredFormat': {\n",
+    "                            'numberFormat': {\n",
+    "                                'type': 'NUMBER',\n",
+    "                                'pattern': '#,##0.00'\n",
+    "                            }\n",
+    "                        }\n",
+    "                    },\n",
+    "                    'fields': 'userEnteredFormat.numberFormat'\n",
+    "                }\n",
+    "            })\n",
+    "            \n",
+    "            # Apply the formatting\n",
+    "            body = {'requests': requests}\n",
+    "            service.spreadsheets().batchUpdate(\n",
+    "                spreadsheetId=spreadsheet_id,\n",
+    "                body=body\n",
+    "            ).execute()\n",
     "        \n",
     "        print(f\"Updated {result.get('updatedCells')} cells in {sheet_name}\")\n",
     "        return True\n",
@@ -204,60 +255,7 @@
     "        return False\n",
     "    except Exception as e:\n",
     "        print(f\"An unexpected error occurred in {sheet_name}: {str(e)}\")\n",
-    "        return False\n",
-    "\n",
-    "def main():\n",
-    "    CREDENTIALS_FILE = 'credentials.json' \n",
-    "    \n",
-    "    try:\n",
-    "        spreadsheet = connect_to_sheets(CREDENTIALS_FILE)\n",
-    "        \n",
-    "        stock_inflow_df = read_worksheet_to_df(spreadsheet, 'stock_inflow')\n",
-    "        release_df = read_worksheet_to_df(spreadsheet, 'release')\n",
-    "        \n",
-    "        stock_inflow_main_df, opening_stock_df, release_df, summary_df = process_sheets_data(stock_inflow_df, release_df)\n",
-    "        \n",
-    "        spreadsheet_id = os.getenv('SPREADSHEET_ID')\n",
-    "        \n",
-    "        success_stock = upload_df_to_gsheet(\n",
-    "            stock_inflow_main_df, \n",
-    "            spreadsheet_id, \n",
-    "            'stock_inflow_clean',\n",
-    "            CREDENTIALS_FILE\n",
-    "        )\n",
-    "        \n",
-    "        success_opening_stock = upload_df_to_gsheet(\n",
-    "            opening_stock_df, \n",
-    "            spreadsheet_id, \n",
-    "            'opening_stock',\n",
-    "            CREDENTIALS_FILE\n",
-    "        )\n",
-    "        \n",
-    "        success_release = upload_df_to_gsheet(\n",
-    "            release_df, \n",
-    "            spreadsheet_id, \n",
-    "            'release_clean',\n",
-    "            CREDENTIALS_FILE\n",
-    "        )\n",
-    "        \n",
-    "        success_summary = upload_df_to_gsheet(\n",
-    "            summary_df,\n",
-    "            spreadsheet_id,\n",
-    "            'summary',\n",
-    "            CREDENTIALS_FILE\n",
-    "        )\n",
-    "        \n",
-    "        if success_stock and success_opening_stock and success_release and success_summary:\n",
-    "            print(\"Data processing and upload completed successfully!\")\n",
-    "        else:\n",
-    "            raise Exception(\"Failed to upload one or more datasets\")\n",
-    "            \n",
-    "    except Exception as e:\n",
-    "        print(f\"An error occurred: {str(e)}\")\n",
-    "        raise\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "        return False\n"
    ]
   }
  ],
